--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -1,6 +1,63 @@
 @import url(https://fonts.googleapis.com/css?family=Nunito);@charset "UTF-8";
 
 /*!
+ * This file is part of Emotionally.
+ *
+ * Emotionally is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * Emotionally is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with Emotionally.  If not, see <http://www.gnu.org/licenses/>.
+ */
+
+.el-0dp {
+  background-color: #121212;
+}
+
+.el-1dp {
+  background-color: #1e1e1e;
+}
+
+.el-2dp {
+  background-color: #232323;
+}
+
+.el-3dp {
+  background-color: #252525;
+}
+
+.el-4dp {
+  background-color: #272727;
+}
+
+.el-6dp {
+  background-color: #2c2c2c;
+}
+
+.el-8dp {
+  background-color: #2e2e2e;
+}
+
+.el-12dp {
+  background-color: #333333;
+}
+
+.el-16dp {
+  background-color: #363636;
+}
+
+.el-24dp {
+  background-color: #383838;
+}
+
+/*!
  * Bootstrap v4.4.1 (https://getbootstrap.com/)
  * Copyright 2011-2019 The Bootstrap Authors
  * Copyright 2011-2019 Twitter, Inc.
@@ -21,7 +78,7 @@
   --white: #fff;
   --gray: #6c757d;
   --gray-dark: #343a40;
-  --primary: #3490dc;
+  --primary: #FF9800;
   --secondary: #6c757d;
   --success: #38c172;
   --info: #6cb2eb;
@@ -70,9 +127,9 @@ body {
   font-size: 0.9rem;
   font-weight: 400;
   line-height: 1.6;
-  color: #212529;
+  color: rgba(255, 255, 255, 0.6);
   text-align: left;
-  background-color: #f8fafc;
+  background-color: #121212;
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
@@ -170,13 +227,13 @@ sup {
 }
 
 a {
-  color: #3490dc;
+  color: #FF9800;
   text-decoration: none;
   background-color: transparent;
 }
 
 a:hover {
-  color: #1d68a7;
+  color: #b36a00;
   text-decoration: underline;
 }
 
@@ -512,7 +569,7 @@ mark,
 
 .img-thumbnail {
   padding: 0.25rem;
-  background-color: #f8fafc;
+  background-color: #121212;
   border: 1px solid #dee2e6;
   border-radius: 0.25rem;
   max-width: 100%;
@@ -1979,7 +2036,7 @@ pre code {
 .table {
   width: 100%;
   margin-bottom: 1rem;
-  color: #212529;
+  color: rgba(255, 255, 255, 0.6);
 }
 
 .table th,
@@ -2029,30 +2086,30 @@ pre code {
 }
 
 .table-hover tbody tr:hover {
-  color: #212529;
+  color: rgba(255, 255, 255, 0.6);
   background-color: rgba(0, 0, 0, 0.075);
 }
 
 .table-primary,
 .table-primary > th,
 .table-primary > td {
-  background-color: #c6e0f5;
+  background-color: #ffe2b8;
 }
 
 .table-primary th,
 .table-primary td,
 .table-primary thead th,
 .table-primary tbody + tbody {
-  border-color: #95c5ed;
+  border-color: #ffc97a;
 }
 
 .table-hover .table-primary:hover {
-  background-color: #b0d4f1;
+  background-color: #ffd89f;
 }
 
 .table-hover .table-primary:hover > td,
 .table-hover .table-primary:hover > th {
-  background-color: #b0d4f1;
+  background-color: #ffd89f;
 }
 
 .table-secondary,
@@ -2360,9 +2417,9 @@ pre code {
 .form-control:focus {
   color: #495057;
   background-color: #fff;
-  border-color: #a1cbef;
+  border-color: #ffcc80;
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(52, 144, 220, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(255, 152, 0, 0.25);
 }
 
 .form-control::-webkit-input-placeholder {
@@ -2436,7 +2493,7 @@ select.form-control:focus::-ms-value {
   margin-bottom: 0;
   font-size: 0.9rem;
   line-height: 1.6;
-  color: #212529;
+  color: rgba(255, 255, 255, 0.6);
   background-color: transparent;
   border: solid transparent;
   border-width: 1px 0;
@@ -2849,7 +2906,7 @@ textarea.form-control.is-invalid {
 .skip-navigation {
   display: inline-block;
   font-weight: 400;
-  color: #212529;
+  color: rgba(255, 255, 255, 0.6);
   text-align: center;
   vertical-align: middle;
   cursor: pointer;
@@ -2877,7 +2934,7 @@ textarea.form-control.is-invalid {
 
 .btn:hover,
 .skip-navigation:hover {
-  color: #212529;
+  color: rgba(255, 255, 255, 0.6);
   text-decoration: none;
 }
 
@@ -2886,7 +2943,7 @@ textarea.form-control.is-invalid {
 .btn.focus,
 .focus.skip-navigation {
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(52, 144, 220, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(255, 152, 0, 0.25);
 }
 
 .btn.disabled,
@@ -2905,16 +2962,16 @@ fieldset:disabled a.skip-navigation {
 
 .btn-primary,
 .skip-navigation {
-  color: #fff;
-  background-color: #3490dc;
-  border-color: #3490dc;
+  color: #212529;
+  background-color: #FF9800;
+  border-color: #FF9800;
 }
 
 .btn-primary:hover,
 .skip-navigation:hover {
   color: #fff;
-  background-color: #227dc7;
-  border-color: #2176bd;
+  background-color: #d98100;
+  border-color: #cc7a00;
 }
 
 .btn-primary:focus,
@@ -2922,18 +2979,18 @@ fieldset:disabled a.skip-navigation {
 .btn-primary.focus,
 .focus.skip-navigation {
   color: #fff;
-  background-color: #227dc7;
-  border-color: #2176bd;
-  box-shadow: 0 0 0 0.2rem rgba(82, 161, 225, 0.5);
+  background-color: #d98100;
+  border-color: #cc7a00;
+  box-shadow: 0 0 0 0.2rem rgba(222, 135, 6, 0.5);
 }
 
 .btn-primary.disabled,
 .disabled.skip-navigation,
 .btn-primary:disabled,
 .skip-navigation:disabled {
-  color: #fff;
-  background-color: #3490dc;
-  border-color: #3490dc;
+  color: #212529;
+  background-color: #FF9800;
+  border-color: #FF9800;
 }
 
 .btn-primary:not(:disabled):not(.disabled):active,
@@ -2943,8 +3000,8 @@ fieldset:disabled a.skip-navigation {
 .show > .btn-primary.dropdown-toggle,
 .show > .dropdown-toggle.skip-navigation {
   color: #fff;
-  background-color: #2176bd;
-  border-color: #1f6fb2;
+  background-color: #cc7a00;
+  border-color: #bf7200;
 }
 
 .btn-primary:not(:disabled):not(.disabled):active:focus,
@@ -2953,7 +3010,7 @@ fieldset:disabled a.skip-navigation {
 .skip-navigation:not(:disabled):not(.disabled).active:focus,
 .show > .btn-primary.dropdown-toggle:focus,
 .show > .dropdown-toggle.skip-navigation:focus {
-  box-shadow: 0 0 0 0.2rem rgba(82, 161, 225, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(222, 135, 6, 0.5);
 }
 
 .btn-secondary {
@@ -3244,39 +3301,39 @@ fieldset:disabled a.skip-navigation {
 }
 
 .btn-outline-primary {
-  color: #3490dc;
-  border-color: #3490dc;
+  color: #FF9800;
+  border-color: #FF9800;
 }
 
 .btn-outline-primary:hover {
-  color: #fff;
-  background-color: #3490dc;
-  border-color: #3490dc;
+  color: #212529;
+  background-color: #FF9800;
+  border-color: #FF9800;
 }
 
 .btn-outline-primary:focus,
 .btn-outline-primary.focus {
-  box-shadow: 0 0 0 0.2rem rgba(52, 144, 220, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(255, 152, 0, 0.5);
 }
 
 .btn-outline-primary.disabled,
 .btn-outline-primary:disabled {
-  color: #3490dc;
+  color: #FF9800;
   background-color: transparent;
 }
 
 .btn-outline-primary:not(:disabled):not(.disabled):active,
 .btn-outline-primary:not(:disabled):not(.disabled).active,
 .show > .btn-outline-primary.dropdown-toggle {
-  color: #fff;
-  background-color: #3490dc;
-  border-color: #3490dc;
+  color: #212529;
+  background-color: #FF9800;
+  border-color: #FF9800;
 }
 
 .btn-outline-primary:not(:disabled):not(.disabled):active:focus,
 .btn-outline-primary:not(:disabled):not(.disabled).active:focus,
 .show > .btn-outline-primary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(52, 144, 220, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(255, 152, 0, 0.5);
 }
 
 .btn-outline-secondary {
@@ -3533,12 +3590,12 @@ fieldset:disabled a.skip-navigation {
 
 .btn-link {
   font-weight: 400;
-  color: #3490dc;
+  color: #FF9800;
   text-decoration: none;
 }
 
 .btn-link:hover {
-  color: #1d68a7;
+  color: #b36a00;
   text-decoration: underline;
 }
 
@@ -3659,7 +3716,7 @@ input[type=button].btn-block {
   padding: 0.5rem 0;
   margin: 0.125rem 0 0;
   font-size: 0.9rem;
-  color: #212529;
+  color: rgba(255, 255, 255, 0.6);
   text-align: left;
   list-style: none;
   background-color: #fff;
@@ -3851,7 +3908,7 @@ input[type=button].btn-block {
 .dropdown-item:active {
   color: #fff;
   text-decoration: none;
-  background-color: #3490dc;
+  background-color: #FF9800;
 }
 
 .dropdown-item.disabled,
@@ -4280,22 +4337,22 @@ input[type=button].btn-block {
 
 .custom-control-input:checked ~ .custom-control-label::before {
   color: #fff;
-  border-color: #3490dc;
-  background-color: #3490dc;
+  border-color: #FF9800;
+  background-color: #FF9800;
 }
 
 .custom-control-input:focus ~ .custom-control-label::before {
-  box-shadow: 0 0 0 0.2rem rgba(52, 144, 220, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(255, 152, 0, 0.25);
 }
 
 .custom-control-input:focus:not(:checked) ~ .custom-control-label::before {
-  border-color: #a1cbef;
+  border-color: #ffcc80;
 }
 
 .custom-control-input:not(:disabled):active ~ .custom-control-label::before {
   color: #fff;
-  background-color: #cce3f6;
-  border-color: #cce3f6;
+  background-color: #ffe0b3;
+  border-color: #ffe0b3;
 }
 
 .custom-control-input[disabled] ~ .custom-control-label,
@@ -4347,8 +4404,8 @@ input[type=button].btn-block {
 }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
-  border-color: #3490dc;
-  background-color: #3490dc;
+  border-color: #FF9800;
+  background-color: #FF9800;
 }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::after {
@@ -4356,11 +4413,11 @@ input[type=button].btn-block {
 }
 
 .custom-checkbox .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(52, 144, 220, 0.5);
+  background-color: rgba(255, 152, 0, 0.5);
 }
 
 .custom-checkbox .custom-control-input:disabled:indeterminate ~ .custom-control-label::before {
-  background-color: rgba(52, 144, 220, 0.5);
+  background-color: rgba(255, 152, 0, 0.5);
 }
 
 .custom-radio .custom-control-label::before {
@@ -4372,7 +4429,7 @@ input[type=button].btn-block {
 }
 
 .custom-radio .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(52, 144, 220, 0.5);
+  background-color: rgba(255, 152, 0, 0.5);
 }
 
 .custom-switch {
@@ -4413,7 +4470,7 @@ input[type=button].btn-block {
 }
 
 .custom-switch .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(52, 144, 220, 0.5);
+  background-color: rgba(255, 152, 0, 0.5);
 }
 
 .custom-select {
@@ -4435,9 +4492,9 @@ input[type=button].btn-block {
 }
 
 .custom-select:focus {
-  border-color: #a1cbef;
+  border-color: #ffcc80;
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(52, 144, 220, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(255, 152, 0, 0.25);
 }
 
 .custom-select:focus::-ms-value {
@@ -4500,8 +4557,8 @@ input[type=button].btn-block {
 }
 
 .custom-file-input:focus ~ .custom-file-label {
-  border-color: #a1cbef;
-  box-shadow: 0 0 0 0.2rem rgba(52, 144, 220, 0.25);
+  border-color: #ffcc80;
+  box-shadow: 0 0 0 0.2rem rgba(255, 152, 0, 0.25);
 }
 
 .custom-file-input[disabled] ~ .custom-file-label,
@@ -4565,15 +4622,15 @@ input[type=button].btn-block {
 }
 
 .custom-range:focus::-webkit-slider-thumb {
-  box-shadow: 0 0 0 1px #f8fafc, 0 0 0 0.2rem rgba(52, 144, 220, 0.25);
+  box-shadow: 0 0 0 1px #121212, 0 0 0 0.2rem rgba(255, 152, 0, 0.25);
 }
 
 .custom-range:focus::-moz-range-thumb {
-  box-shadow: 0 0 0 1px #f8fafc, 0 0 0 0.2rem rgba(52, 144, 220, 0.25);
+  box-shadow: 0 0 0 1px #121212, 0 0 0 0.2rem rgba(255, 152, 0, 0.25);
 }
 
 .custom-range:focus::-ms-thumb {
-  box-shadow: 0 0 0 1px #f8fafc, 0 0 0 0.2rem rgba(52, 144, 220, 0.25);
+  box-shadow: 0 0 0 1px #121212, 0 0 0 0.2rem rgba(255, 152, 0, 0.25);
 }
 
 .custom-range::-moz-focus-outer {
@@ -4584,7 +4641,7 @@ input[type=button].btn-block {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: #3490dc;
+  background-color: #FF9800;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -4601,7 +4658,7 @@ input[type=button].btn-block {
 }
 
 .custom-range::-webkit-slider-thumb:active {
-  background-color: #cce3f6;
+  background-color: #ffe0b3;
 }
 
 .custom-range::-webkit-slider-runnable-track {
@@ -4617,7 +4674,7 @@ input[type=button].btn-block {
 .custom-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: #3490dc;
+  background-color: #FF9800;
   border: 0;
   border-radius: 1rem;
   -moz-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -4634,7 +4691,7 @@ input[type=button].btn-block {
 }
 
 .custom-range::-moz-range-thumb:active {
-  background-color: #cce3f6;
+  background-color: #ffe0b3;
 }
 
 .custom-range::-moz-range-track {
@@ -4653,7 +4710,7 @@ input[type=button].btn-block {
   margin-top: 0;
   margin-right: 0.2rem;
   margin-left: 0.2rem;
-  background-color: #3490dc;
+  background-color: #FF9800;
   border: 0;
   border-radius: 1rem;
   -ms-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -4669,7 +4726,7 @@ input[type=button].btn-block {
 }
 
 .custom-range::-ms-thumb:active {
-  background-color: #cce3f6;
+  background-color: #ffe0b3;
 }
 
 .custom-range::-ms-track {
@@ -4782,8 +4839,8 @@ input[type=button].btn-block {
 .nav-tabs .nav-link.active,
 .nav-tabs .nav-item.show .nav-link {
   color: #495057;
-  background-color: #f8fafc;
-  border-color: #dee2e6 #dee2e6 #f8fafc;
+  background-color: #121212;
+  border-color: #dee2e6 #dee2e6 #121212;
 }
 
 .nav-tabs .dropdown-menu {
@@ -4799,7 +4856,7 @@ input[type=button].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #3490dc;
+  background-color: #FF9800;
 }
 
 .nav-fill .nav-item {
@@ -5594,14 +5651,14 @@ input[type=button].btn-block {
   padding: 0.5rem 0.75rem;
   margin-left: -1px;
   line-height: 1.25;
-  color: #3490dc;
+  color: #FF9800;
   background-color: #fff;
   border: 1px solid #dee2e6;
 }
 
 .page-link:hover {
   z-index: 2;
-  color: #1d68a7;
+  color: #b36a00;
   text-decoration: none;
   background-color: #e9ecef;
   border-color: #dee2e6;
@@ -5610,7 +5667,7 @@ input[type=button].btn-block {
 .page-link:focus {
   z-index: 3;
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(52, 144, 220, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(255, 152, 0, 0.25);
 }
 
 .page-item:first-child .page-link {
@@ -5627,8 +5684,8 @@ input[type=button].btn-block {
 .page-item.active .page-link {
   z-index: 3;
   color: #fff;
-  background-color: #3490dc;
-  border-color: #3490dc;
+  background-color: #FF9800;
+  border-color: #FF9800;
 }
 
 .page-item.disabled .page-link {
@@ -5714,20 +5771,20 @@ a.badge:focus {
 }
 
 .badge-primary {
-  color: #fff;
-  background-color: #3490dc;
+  color: #212529;
+  background-color: #FF9800;
 }
 
 a.badge-primary:hover,
 a.badge-primary:focus {
-  color: #fff;
-  background-color: #2176bd;
+  color: #212529;
+  background-color: #cc7a00;
 }
 
 a.badge-primary:focus,
 a.badge-primary.focus {
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(52, 144, 220, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(255, 152, 0, 0.5);
 }
 
 .badge-secondary {
@@ -5897,17 +5954,17 @@ a.badge-dark.focus {
 }
 
 .alert-primary {
-  color: #1b4b72;
-  background-color: #d6e9f8;
-  border-color: #c6e0f5;
+  color: #854f00;
+  background-color: #ffeacc;
+  border-color: #ffe2b8;
 }
 
 .alert-primary hr {
-  border-top-color: #b0d4f1;
+  border-top-color: #ffd89f;
 }
 
 .alert-primary .alert-link {
-  color: #113049;
+  color: #523100;
 }
 
 .alert-secondary {
@@ -6050,7 +6107,7 @@ a.badge-dark.focus {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #3490dc;
+  background-color: #FF9800;
   -webkit-transition: width 0.6s ease;
   transition: width 0.6s ease;
 }
@@ -6116,7 +6173,7 @@ a.badge-dark.focus {
 }
 
 .list-group-item-action:active {
-  color: #212529;
+  color: rgba(255, 255, 255, 0.6);
   background-color: #e9ecef;
 }
 
@@ -6148,8 +6205,8 @@ a.badge-dark.focus {
 .list-group-item.active {
   z-index: 2;
   color: #fff;
-  background-color: #3490dc;
-  border-color: #3490dc;
+  background-color: #FF9800;
+  border-color: #FF9800;
 }
 
 .list-group-item + .list-group-item {
@@ -6334,20 +6391,20 @@ a.badge-dark.focus {
 }
 
 .list-group-item-primary {
-  color: #1b4b72;
-  background-color: #c6e0f5;
+  color: #854f00;
+  background-color: #ffe2b8;
 }
 
 .list-group-item-primary.list-group-item-action:hover,
 .list-group-item-primary.list-group-item-action:focus {
-  color: #1b4b72;
-  background-color: #b0d4f1;
+  color: #854f00;
+  background-color: #ffd89f;
 }
 
 .list-group-item-primary.list-group-item-action.active {
   color: #fff;
-  background-color: #1b4b72;
-  border-color: #1b4b72;
+  background-color: #854f00;
+  border-color: #854f00;
 }
 
 .list-group-item-secondary {
@@ -7083,7 +7140,7 @@ a.close.disabled {
 
 .popover-body {
   padding: 0.5rem 0.75rem;
-  color: #212529;
+  color: rgba(255, 255, 255, 0.6);
 }
 
 .carousel {
@@ -7392,14 +7449,14 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #3490dc !important;
+  background-color: #FF9800 !important;
 }
 
 a.bg-primary:hover,
 a.bg-primary:focus,
 button.bg-primary:hover,
 button.bg-primary:focus {
-  background-color: #2176bd !important;
+  background-color: #cc7a00 !important;
 }
 
 .bg-secondary {
@@ -7528,7 +7585,7 @@ button.bg-dark:focus {
 }
 
 .border-primary {
-  border-color: #3490dc !important;
+  border-color: #FF9800 !important;
 }
 
 .border-secondary {
@@ -11218,12 +11275,12 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-  color: #3490dc !important;
+  color: #FF9800 !important;
 }
 
 a.text-primary:hover,
 a.text-primary:focus {
-  color: #1d68a7 !important;
+  color: #b36a00 !important;
 }
 
 .text-secondary {
@@ -11290,7 +11347,7 @@ a.text-dark:focus {
 }
 
 .text-body {
-  color: #212529 !important;
+  color: rgba(255, 255, 255, 0.6) !important;
 }
 
 .text-muted {
@@ -11431,23 +11488,6 @@ a.text-dark:focus {
     border-color: #dee2e6;
   }
 }
-
-/*!
- * This file is part of Emotionally.
- *
- * Emotionally is free software: you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published by
- * the Free Software Foundation, either version 3 of the License, or
- * (at your option) any later version.
- *
- * Emotionally is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
- *
- * You should have received a copy of the GNU General Public License
- * along with Emotionally.  If not, see <http://www.gnu.org/licenses/>.
- */
 
 /*!
  * This file is part of Emotionally.
