Definizione della landing page (WIP)

--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -11506,6 +11506,23 @@ a.text-dark:focus {
  * along with Emotionally.  If not, see <http://www.gnu.org/licenses/>.
  */
 
+/*!
+ * This file is part of Emotionally.
+ *
+ * Emotionally is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * Emotionally is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with Emotionally.  If not, see <http://www.gnu.org/licenses/>.
+ */
+
 .skip-navigation {
   position: absolute;
   width: 1px;
@@ -11518,6 +11535,8 @@ a.text-dark:focus {
   border: 0;
   position: absolute !important;
   z-index: 1031;
+  color: white;
+  background-color: black;
 }
 
 .skip-navigation:active,
@@ -11528,5 +11547,19 @@ a.text-dark:focus {
   overflow: visible;
   clip: auto;
   white-space: normal;
+}
+
+.skip-navigation:active,
+.skip-navigation:focus {
+  color: white;
+  background-color: black;
+}
+
+:not(#main-navigation) a {
+  text-decoration: underline;
+}
+
+:not(#main-navigation) a:hover {
+  text-decoration: none;
 }
 
