--- a/src/resources/sass/app.scss
+++ b/src/resources/sass/app.scss
@@ -7,4 +7,5 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
-@import "custom/_accessibility";
+// A custom stylesheet
+@import "custom/style";
