--- a/src/resources/sass/_variables.scss
+++ b/src/resources/sass/_variables.scss
@@ -1,7 +1,8 @@
 @import "custom/_dark-theme";
 
 // Typography
-$font-family-sans-serif: 'Nunito', sans-serif;
+//$font-family-sans-serif: 'Nunito', sans-serif;
+$font-family-sans-serif: 'Raleway', sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
