--- a/src/resources/sass/custom/style.scss
+++ b/src/resources/sass/custom/style.scss
@@ -18,11 +18,30 @@
 @import "_accessibility";
 
 a {
-  :not(#main-navigation) & {
-    text-decoration: underline;
+  text-decoration: underline;
+
+  &:hover {
+    text-decoration: none;
+  }
+
+  #main-navigation & {
+    text-decoration: none;
 
     &:hover {
-      text-decoration: none;
+      text-decoration: underline;
     }
   }
+
+  &[target='_blank']::after {
+    font-weight: 900;
+    font-family: "Font Awesome 5 Free", sans-serif;
+    font-size: xx-small;
+    content: '\f35d';
+    vertical-align: super;
+    margin-left: .5em;
+  }
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-weight: 800;
 }
