Correzioni per l'accessibilità

--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -11572,7 +11572,7 @@ a:hover {
 }
 
 #main-navigation a:hover {
-  text-decoration: underline;
+  text-decoration: none;
 }
 
 a[target=_blank]::after {
