--- a/src/resources/sass/custom/style.scss
+++ b/src/resources/sass/custom/style.scss
@@ -46,3 +46,20 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     font-weight: 800;
     color: white;
 }
+
+.breadcrumb-container {
+    @extend .d-block ;
+    @extend .d-md-inline ;
+    @extend .ml-0 ;
+    @extend .ml-md-4;
+
+    .breadcrumb {
+        @extend .p-0;
+        @extend .m-0;
+        @extend .d-inline;
+
+        .breadcrumb-item {
+            @extend .d-inline;
+        }
+    }
+}
