--- a/src/resources/sass/app.scss
+++ b/src/resources/sass/app.scss
@@ -10,5 +10,8 @@
 // FontAwesome
 @import "~@fortawesome/fontawesome-free/css/all.min.css";
 
+// Ovverride jQuery DataTables
+@import "datatables";
+
 // A custom stylesheet
 @import "custom/style";
