Semi-completamento dell'implementazione
Resta da legare l'utente di cui si recuperano le informazioni all'utente attualmente loggato (al momento si utilizza il primo utente nel database a mero scopo di test)

--- a/src/resources/sass/app.scss
+++ b/src/resources/sass/app.scss
@@ -10,7 +10,7 @@
 // FontAwesome
 @import "~@fortawesome/fontawesome-free/css/all.min.css";
 
-// Ovverride jQuery DataTables
+// Import modified jQuery DataTables
 @import "datatables";
 
 // A custom stylesheet
