--- a/src/resources/sass/custom/style.scss
+++ b/src/resources/sass/custom/style.scss
@@ -63,3 +63,12 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
         }
     }
 }
+
+.btn.btn-md-text {
+    @extend .btn-outline-primary;
+    @extend .text-uppercase;
+    @extend .text-decoration-none;
+    @extend .border-0;
+
+    font-weight: 500;
+}
