--- a/src/resources/sass/datatables.scss
+++ b/src/resources/sass/datatables.scss
@@ -15,6 +15,9 @@
  * along with Emotionally.  If not, see <http://www.gnu.org/licenses/>.
  */
 
+// Import jQuery Datatables' CSS (Bootstrap version)
+@import "~datatables.net-bs4/css/dataTables.bootstrap4.min.css";
+
 table.table thead tr {
     background-color: rgba(255, 255, 255, 0.11);
 }
