--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -8930,7 +8930,9 @@ button.bg-dark:focus {
   box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.175) !important;
 }
 
-.shadow-none {
+.shadow-none,
+.btn.btn-md-text,
+.btn-md-text.skip-navigation {
   box-shadow: none !important;
 }
 
