--- a/src/resources/sass/custom/style.scss
+++ b/src/resources/sass/custom/style.scss
@@ -69,6 +69,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     @extend .text-uppercase;
     @extend .text-decoration-none;
     @extend .border-0;
+    @extend .shadow-none;
 
     font-weight: 500;
 }
