--- a/src/resources/sass/app.scss
+++ b/src/resources/sass/app.scss
@@ -1,14 +1,8 @@
 // Fonts
-//@import url('https://fonts.googleapis.com/css?family=Nunito');
-@import url('https://fonts.googleapis.com/css?family=Raleway:400,800&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Nunito');
 
 // Variables
 @import 'variables';
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
-// FontAwesome
-@import "~@fortawesome/fontawesome-free/css/all.min.css";
-
-// A custom stylesheet
-@import "custom/style";
