--- a/src/resources/sass/custom/_dark-theme.scss
+++ b/src/resources/sass/custom/_dark-theme.scss
@@ -37,6 +37,6 @@ $elevations: (
 
 @each $elevation, $opacity in $elevations {
   .el-#{$elevation} {
-    background-color: mix(white, $body-bg, $opacity);
+    background-color: mix(white, $body-bg, $opacity) !important;
   }
 }
