--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -30,7 +30,8 @@
   background-color: #1e1e1e !important;
 }
 
-.el-2dp {
+.el-2dp,
+.project-detail-card {
   background-color: #232323 !important;
 }
 
@@ -46,7 +47,9 @@
   background-color: #2c2c2c !important;
 }
 
-.el-8dp {
+.el-8dp,
+.project-detail-card:hover,
+.project-detail-card:focus {
   background-color: #2e2e2e !important;
 }
 
@@ -11752,6 +11755,113 @@ a[data-toggle=collapse] {
   }
 }
 
+/*!
+ * This file is part of Emotionally.
+ *
+ * Emotionally is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * Emotionally is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with Emotionally.  If not, see <http://www.gnu.org/licenses/>.
+ */
+
+.project-detail-card {
+  position: relative;
+  cursor: pointer;
+}
+
+.project-detail-card.square {
+  width: 100%;
+  padding-bottom: 100%;
+  background-size: cover;
+  background-position: center;
+}
+
+.project-detail-card .project-card-link {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  text-decoration: none;
+}
+
+.project-detail-card .card-title {
+  margin: 0;
+}
+
+.project-detail-card .project-detail-card-title {
+  top: unset;
+  bottom: 0;
+  text-align: center;
+}
+
+.project-detail-card .project-detail-card-options {
+  top: 0;
+  bottom: unset;
+  text-align: right;
+}
+
+.project-detail-card .project-detail-card-options .dropdown button::after {
+  content: none;
+}
+
+.project-detail-card .bg-video-placeholder-container {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  left: 0;
+  top: 0;
+  overflow: hidden;
+  border-radius: 0.25rem;
+}
+
+.project-detail-card .bg-video-placeholder-container .bg-video-placeholder {
+  position: absolute;
+  height: 130%;
+  width: 130%;
+  left: -15%;
+  top: -15%;
+  background-size: cover;
+  background-position: center;
+  -webkit-filter: blur(10px);
+          filter: blur(10px);
+  opacity: 0.5;
+}
+
+.project-detail-card .folder-background::before {
+  opacity: 0.75;
+  font-size: 4rem;
+  position: absolute;
+  font-family: "Font Awesome 5 Free Regular", fantasy;
+  font-weight: 400;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  content: "\F07B";
+}
+
+.project-detail-card .video-background::before {
+  opacity: 0.75;
+  font-size: 4rem;
+  position: absolute;
+  font-family: "Font Awesome 5 Free", fantasy;
+  font-weight: 900;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  content: "\F03D";
+}
+
 a {
   text-decoration: underline;
 }
@@ -11760,16 +11870,16 @@ a:hover {
   text-decoration: none;
 }
 
-#main-navigation a {
+#main-navigation a,
+.breadcrumb a,
+.dropdown-menu a {
   text-decoration: none;
 }
 
-#main-navigation a:hover {
+#main-navigation a:hover,
+.breadcrumb a:hover,
+.dropdown-menu a:hover {
   text-decoration: underline;
-}
-
-.breadcrumb a {
-  text-decoration: none;
 }
 
 a[target=_blank]::after {
