--- a/src/resources/sass/custom/style.scss
+++ b/src/resources/sass/custom/style.scss
@@ -79,3 +79,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 .clickable {
     cursor: pointer;
 }
+
+.dropdown.more-icon button::after {
+    content: none
+}
