--- a/src/resources/sass/datatables.scss
+++ b/src/resources/sass/datatables.scss
@@ -22,6 +22,10 @@ table.table thead tr {
     background-color: rgba(255, 255, 255, 0.11);
 }
 
+.table td{
+    @extend .align-middle;
+}
+
 .table-striped tbody tr:nth-of-type(odd) {
     background-color: transparent !important;
 }
