--- a/src/resources/sass/app.scss
+++ b/src/resources/sass/app.scss
@@ -8,7 +8,9 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 // FontAwesome
-@import "~@fortawesome/fontawesome-free/css/all.min.css";
+@import "~@fortawesome/fontawesome-free/scss/fontawesome";
+@import "~@fortawesome/fontawesome-free/scss/solid";
+@import "~@fortawesome/fontawesome-free/scss/regular";
 
 // Import modified jQuery DataTables
 @import "datatables";
