--- a/src/resources/sass/app.scss
+++ b/src/resources/sass/app.scss
@@ -12,6 +12,8 @@
 @import "~@fortawesome/fontawesome-free/scss/solid";
 @import "~@fortawesome/fontawesome-free/scss/regular";
 
+@import "_scrollbar";
+
 // Import modified jQuery DataTables
 @import "datatables";
 
