--- a/src/resources/views/test-webcam.html
+++ b/src/resources/views/test-webcam.html
@@ -19,52 +19,53 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/app.css" />
-  <title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/app.css" />
+    <title>Document</title>
 </head>
 
 <body>
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-md-8" id="affdex_elements" style="width:680px;height:480px;"></div>
-      <div class="col-md-4">
-        <div style="height:25em;">
-          <strong>EMOTION TRACKING RESULTS</strong>
-          <div id="results" style="word-wrap:break-word;"></div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-8" id="affdex_elements" style="width:680px;height:480px;"></div>
+            <div class="col-md-4">
+                <div style="height:25em;">
+                    <strong>EMOTION TRACKING RESULTS</strong>
+                    <div id="results" style="word-wrap:break-word;"></div>
+                </div>
+                <div>
+                    <strong>DETECTOR LOG MSGS</strong>
+                </div>
+                <div id="logs"></div>
+            </div>
         </div>
         <div>
-          <strong>DETECTOR LOG MSGS</strong>
+            <button id="start" onclick="onStart()">Start</button>
+            <button id="stop" onclick="onStop()">Stop</button>
+            <button id="reset" onclick="onReset()">Reset</button>
+            <h3>Affectiva JS SDK CameraDetector to track different emotions.</h3>
+            <p>
+                <strong>Instructions</strong>
+                <br />
+                Press the start button to start the detector.
+                <br /> When a face is detected, the probabilities of the different emotions are written to the DOM.
+                <br /> Press the stop button to end the detector.
+            </p>
         </div>
-        <div id="logs"></div>
-      </div>
     </div>
-    <div>
-      <button id="start" onclick="onStart()">Start</button>
-      <button id="stop" onclick="onStop()">Stop</button>
-      <button id="reset" onclick="onReset()">Reset</button>
-      <h3>Affectiva JS SDK CameraDetector to track different emotions.</h3>
-      <p>
-        <strong>Instructions</strong>
-        <br />
-        Press the start button to start the detector.
-        <br /> When a face is detected, the probabilities of the different emotions are written to the DOM.
-        <br /> Press the stop button to end the detector.
-      </p>
-    </div>
-  </div>
 
-  <script src="/js/app.js" type="text/javascript"></script>
-  <script type="text/javascript" src="https://download.affectiva.com/js/3.2/affdex.js"></script>
-  <script>
-    let functions = EmotionAnalysis.analyzeCamera(console.log);
+    <script type="text/javascript" src="/js/app.js"></script>
+    <script type="text/javascript" src="/js/vendor/affdex.js"></script>
+    <script type="text/javascript" src="/js/emotion-analysis.js"></script>
+    <script>
+        let functions = EmotionAnalysis.analyzeCamera(console.log);
 
-    function onStart() { functions.start(); }
-    function onStop() { functions.stop(); }
-    function onReset() { functions.reset(); }
+        function onStart() { functions.start(); }
+        function onStop() { functions.stop(); }
+        function onReset() { functions.reset(); }
 
-  </script>
+    </script>
 </body>
 
 </html>
