--- a/src/resources/sass/custom/style.scss
+++ b/src/resources/sass/custom/style.scss
@@ -67,3 +67,13 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     color: white;
     font-size: 2em;
 }
+
+.smaller-charts {
+    height: 35vh;
+    position: relative;
+}
+
+.bigger-charts {
+    height: 50vh;
+    position: relative;
+}
