--- a/src/resources/sass/custom/_accessibility.scss
+++ b/src/resources/sass/custom/_accessibility.scss
@@ -44,6 +44,7 @@ a, .btn-link {
         text-decoration: none;
 
         &:hover, &:focus {
+            border: none;
             text-decoration: underline;
         }
     }
