--- a/src/resources/sass/custom/_sidebar.scss
+++ b/src/resources/sass/custom/_sidebar.scss
@@ -22,7 +22,7 @@
 
 .sidebar {
     width: 250px;
-    position: fixed;
+    position: fixed !important;
     top: 0;
     left: 0;
     height: 100vh;
