Aggiunte indicazioni sull'utente loggato

--- a/src/resources/sass/custom/_dark-theme.scss
+++ b/src/resources/sass/custom/_dark-theme.scss
@@ -40,3 +40,8 @@ $elevations: (
     background-color: mix(white, $body-bg, $opacity) !important;
   }
 }
+
+
+.border.border-text{
+    border-color: $body-color !important;
+}
