Correzione bug grafico
Correzione di un errore che non permetteva di mostrare le icone a forma di 'cartella'

--- a/src/resources/sass/custom/_cards.scss
+++ b/src/resources/sass/custom/_cards.scss
@@ -85,7 +85,7 @@
         opacity: 0.75;
         font-size: 4rem;
         position: absolute;
-        font-family: 'Font Awesome 5 Free Regular', fantasy;
+        font-family: 'Font Awesome 5 Free', fantasy;
         font-weight: 400;
         top: 50%;
         left: 50%;
